ecmascript/parser/tests/typescript-errors/tsc/es6/functionPropertyAssignments/FunctionPropertyAssignments2_es6/input.ts.stderr
error[1005]: Expected a property name
 --> $DIR/tests/typescript-errors/tsc/es6/functionPropertyAssignments/FunctionPropertyAssignments2_es6/input.ts:2:12
  |
2 | var v = { *() { } }
  |            ^

